static/style.css
/************************ --- GLOBAL --- ***************************/
@import url('https://fonts.googleapis.com/css?family=Lato|Oswald');

/* font-size at 62.5% makes 1rem = 10px for mobile sizing */
html {
    font-size: 62.5%;
}
/* Increase base font size for iPad and up */
@media only screen and (min-width: 768px) {
    html {
        font-size: 90%;
    }
}

* {
	margin: 0;
	padding: 0;
	border: 0;
}

body{
    font-family: Lato;
    font-weight: 500;
    color: #494949;
    width: 100%;
    /* Wallpaper source: https://www.publicdomainpictures.net/en/view-image.php?image=112124&picture=shamrock-wallpaper-background */
    background-image: url('https://res.cloudinary.com/cjcon90/image/upload/v1615047486/they_think_its_all_clover/wallpapertip_shamrock-wallpaper_1951752.png');
    background-size: 100%;
    -webkit-backdrop-filter: opacity(.2);
            backdrop-filter: opacity(.2);
}

/************************************************** Typography */

/* Section titles */
.title {
    display: inline-block;
    width: 100%;
    font-size: 2.5rem;
    text-transform: uppercase;
    letter-spacing: 3px;
    padding: 1rem .5rem;
    color: white;
    background-color: #219664;
    border-radius: 10px 10px 0 0;
}

/* Hashtag with gradient background */
.hashtag {
    font-size: 3rem;
    background: -o-linear-gradient(left, #219664,#32e095, #ffab5c, #ff8a4c);
    background: -webkit-gradient(linear, left top, right top, from(#219664),color-stop(#32e095), color-stop(#ffab5c), to(#ff8a4c));
    background: linear-gradient(to right, #219664,#32e095, #ffab5c, #ff8a4c);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-weight: 700;
}


.tweet-count {
    font-size: 3.5rem;
    color: #ff8a4c;
    font-weight: 700;
}

.tweet-count-subtitle {
    text-transform: uppercase;
    font-weight: 700;
    color: #219664;
    font-size: 1.5rem;
}

.prompt {
    font-weight: 600;
    color: #ff8a4c;
    font-size: 2.5rem;
}

/************************************************** Layout */

/* Section box */
.outer-box {
    margin: 1.5rem auto;
    border: solid 2px rgba(0, 167, 74, .5);
    padding: 0;
    border-radius: 1rem;
    max-width: 95%;
    -webkit-box-shadow: 0 0 20px rgba(0,0,0, .4);
            box-shadow: 0 0 20px rgba(0,0,0, .4);
    background: rgba(255, 255, 255, .85);
}

@media only screen and (min-width: 768px) {
    .outer-box {
        max-width: 650px;
    }
}

@media only screen and (min-width: 992px) {
    .outer-box {
        max-width: 95%;
    }
    .text-box, .tweet-box {
        max-width: 40vw;
    }
}

/* Section box minus heading */
.inner-box {
    padding: 1rem;
}
.col-md-12 {
    width: 95%;
    max-width: 700px;
}

/************************************************** Header section */

header {
    height: 10rem;
} 

#hero-image{
    background: url("https://res.cloudinary.com/cjcon90/image/upload/v1615037115/they_think_its_all_clover/header.png");
    background-position: center center;
    background-size: cover;
    background-repeat: no-repeat;
    -webkit-animation-name: hero-zoom;
            animation-name: hero-zoom;
    -webkit-animation-duration: 1s;
            animation-duration: 1s;
    -webkit-animation-fill-mode: forwards;
            animation-fill-mode: forwards;
}

@-webkit-keyframes hero-zoom {
    from{
        -webkit-transform: scale(1.2);
                transform: scale(1.2);
    }
    to{
        -webkit-transform: scale(1);
                transform: scale(1);
    }
}

@keyframes hero-zoom {
    from{
        -webkit-transform: scale(1.2);
                transform: scale(1.2);
    }
    to{
        -webkit-transform: scale(1);
                transform: scale(1);
    }
}

/************************************************** Content section */


/********************** Main Text section */

.text-sub-box {
    text-align: center;
    padding-top: 1rem;
}

.tweet-button:link, .tweet-button:visited {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: space-evenly;
        -ms-flex-pack: space-evenly;
            justify-content: space-evenly;
    margin: auto;
    width: 10rem;
    padding: .5rem;
    gap: .5rem;
    background-color: #219664;
    border: solid 3px transparent;
    color: white;
    font-weight: 700;
    text-decoration: none;
    text-transform: uppercase;
    border-radius: 1rem;
    font-size: 1.5rem;
    -webkit-transition: all .2s;
    -o-transition: all .2s;
    transition: all .2s;
}

.tweet-button:hover, .tweet-button:focus {
    background-color: #00c700;
    -webkit-transform: translateY(-5%);
        -ms-transform: translateY(-5%);
            transform: translateY(-5%);
    -webkit-box-shadow: 2px 2px 10px rgba(0,0,0, .4);
            box-shadow: 2px 2px 10px rgba(0,0,0, .4);
}
.tweet-button:active {
    -webkit-transform: translateY(2%);
        -ms-transform: translateY(2%);
            transform: translateY(2%);
    background-color: #219664;
    border: solid 3px #00c700;
}

.twitter-icon {
    height: 2rem;
    fill: white;
}


/********************** Tweet Board section */
.tweet-board {
    height:15rem;
}


/********************** Map section */
#mapContainer{
    background:red;
    width: 95vw;
    overflow: hidden;
}
#map{
    min-height: 25rem;
    max-width: 99%;
    overflow: hidden;
}

/************************************************** Footer section */

footer {
    background-color: #219664;
    color: #fafafa;
    padding-top: 1.5rem;
    padding-bottom: 1.5rem;
}

/*----------------- Copyright entry */
.copyright {
	margin: auto 8px;
    font-size: 0.8rem;
    text-align: center;
}

.copyright em {
	margin-right: .5rem;
}

.details{
    width: 100%;
}
hr{
    width:100%;
}
.helpLink{
    width:100%;
    margin-left:40%;
}
.hidden{
    display:none;
}
#noLocContainer{
    height:50vh;
    background-color: grey;
    overflow-y: scroll;
}
#chat{
    overflow: hidden;
}
.userPic{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    margin:0 auto;
    height:100px;
    width:100px;
    border-radius: 50%;
}
.userPics img{
    height:100px;
    width:100px;
    margin-top:5px;
    margin-bottom: 0;
    border-radius: 50%;
}
#header{
    background: url("../static/header.png");
    background-repeat: no-repeat;
    background-size: cover;
    height:150px;
    background-position: center;
    max-width: 100vw;
}
.tweetCard{
    position: relative;
    height:300px;
    width:90%;
    margin:10px;
    background: -o-linear-gradient(left, #169b62, #ffffff, #ff883e);
    background: -webkit-gradient(linear, left top, right top, from(#169b62), color-stop(#ffffff), to(#ff883e));
    background: linear-gradient(90deg, #169b62, #ffffff, #ff883e);
    border: 5px solid #000;
    -webkit-box-sizing: border-box;
            box-sizing: border-box;
    -webkit-box-shadow: 10px 10px 30px rgba(0,0,0,0.7);
            box-shadow: 10px 10px 30px rgba(0,0,0,0.7); 
}
.tweetdata{
    position: relative;
    height:300px;
    width:90%;
    margin:10px;
    background: -o-linear-gradient(left, #169b62, #ffffff, #ff883e);
    background: -webkit-gradient(linear, left top, right top, from(#169b62), color-stop(#ffffff), to(#ff883e));
    background: linear-gradient(90deg, #169b62, #ffffff, #ff883e);
    border: 5px solid #000;
    -webkit-box-sizing: border-box;
            box-sizing: border-box;
    -webkit-box-shadow: 10px 10px 30px rgba(0,0,0,0.7);
            box-shadow: 10px 10px 30px rgba(0,0,0,0.7);
}
.tweetdata button{
    position: absolute;
    width: 200px;
    right:50px;
}
.tweetdata h1,
.tweetdata h2,
.tweetdata h3{
    margin-top: 5px;
    margin-left:30px;
    font-size: 250%;
}
.borderCard h1{
    text-decoration: underline;
}
.messageCard{
    display: block;
    height:300px;
    width:90%;
    overflow-y: scroll;
    overflow-x: hidden;
    margin:10px;
    border: 5px solid #000;
    -webkit-box-sizing: border-box;
            box-sizing: border-box;
    -webkit-box-shadow: 10px 10px 30px rgba(0,0,0,0.7);
            box-shadow: 10px 10px 30px rgba(0,0,0,0.7);
}
.userCard{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    margin-left:5%;
    margin-right:5%;
    margin-bottom: 20px;
    width:90%;
    height:auto;
    -webkit-box-sizing: border-box;
            box-sizing: border-box;
    -webkit-box-shadow: 5px 5px 15px #000;
            box-shadow: 5px 5px 15px #000;
    border-radius: 10%;
}
.modal-dialog{
    margin-top: 10%;
    max-width:100vw;
    background: red;
}
.modal-content{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    text-align: center;
    font-size: larger;
    font-weight: 600;
    text-shadow: 1px 1px 1px #fff, 3px 3px 5px #ff8a4c, 5px 5px 10px #219664;
    color:black;
    background: -o-linear-gradient(left, #219664,#32e095, #ffab5c, #ff8a4c);
    background: -webkit-gradient(linear, left top, right top, from(#219664),color-stop(#32e095), color-stop(#ffab5c), to(#ff8a4c));
    background: linear-gradient(to right, #219664,#32e095, #ffab5c, #ff8a4c);
}
.modal-content iframe{
    -webkit-box-sizing: border-box;
            box-sizing: border-box;
    -webkit-box-shadow: 2px 2px 5px #fff, 3px 3px 10px #ff8a4c, 5px 5px 15px #000;
            box-shadow: 2px 2px 5px #fff, 3px 3px 10px #ff8a4c, 5px 5px 15px #000;
    border-radius: 5%;
    margin-bottom: 25px;
    width: 100%;
}

.box {
    margin:0 auto;
	background: -webkit-gradient(linear, left top, right top, from(gold), to(darkorange));
	background: -o-linear-gradient(left, gold, darkorange);
	background: linear-gradient(to right, gold, darkorange);
	color: white;
	--width: 50%;
	--height: 50px;
	width: var(--width);
	height: var(--height);
	text-align: center;
	line-height: var(--height);
	font-size: calc(var(--height) / 2.5);
	font-family: sans-serif;
	letter-spacing: 0.2em;
	border: 1px solid darkgoldenrod;
	border-radius: 2em;
	-webkit-transform: perspective(500px) rotateY(-15deg);
	        transform: perspective(500px) rotateY(-15deg);
	text-shadow: 6px 3px 2px rgba(0, 0, 0, 0.2);
	-webkit-box-shadow: 2px 0 0 5px rgba(0, 0, 0, 0.2);
	        box-shadow: 2px 0 0 5px rgba(0, 0, 0, 0.2);
	-webkit-transition: 0.5s;
	-o-transition: 0.5s;
	transition: 0.5s;
	position: relative;
	overflow: hidden;
}

.box:hover {
	-webkit-transform: perspective(500px) rotateY(15deg);
	        transform: perspective(500px) rotateY(15deg);
	text-shadow: -6px 3px 2px rgba(0, 0, 0, 0.2);
	-webkit-box-shadow: -2px 0 0 5px rgba(0, 0, 0, 0.2);
	        box-shadow: -2px 0 0 5px rgba(0, 0, 0, 0.2);
}

.box::before {
	content: '';
	position: absolute;
	width: 100%;
	height: 100%;
	background: -webkit-gradient(linear, left top, right top, from(transparent), color-stop(white), to(transparent));
	background: -o-linear-gradient(left, transparent, white, transparent);
	background: linear-gradient(to right, transparent, white, transparent);
	left: -100%;
	-webkit-transition: 0.5s;
	-o-transition: 0.5s;
	transition: 0.5s;
}

.box:hover::before {
	left: 100%;
}

